feat (auth): Set auth status on logout
